--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.1",
     "@react-three/drei": "^9.116.1",
     "@react-three/fiber": "^8.17.10",
+    "@vercel/analytics": "^1.4.1",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
-    "@emailjs/browser": "^4.4.1",
     "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
